--- a/app/src/main/res/layout-land/fragment_complete.xml
+++ b/app/src/main/res/layout-land/fragment_complete.xml
@@ -42,7 +42,7 @@
             android:background="@null"
             android:contentDescription="@string/settings"
             android:scaleType="fitCenter"
-            android:src="@mipmap/ic_settings_black_36dp" />
+            android:src="@mipmap/ic_settings_36dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -67,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:contentDescription="@string/next"
-                android:src="@mipmap/ic_arrow_forward_black_36dp" />
+                android:src="@mipmap/ic_arrow_forward_36dp" />
 
         </LinearLayout>
     </RelativeLayout>
