--- a/app/src/main/res/layout/content_infinite_series.xml
+++ b/app/src/main/res/layout/content_infinite_series.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/click_start"
-        android:textColor="@android:color/black"
+        android:textColor="?android:textColorPrimary"
         android:textSize="32sp" />
 
     <TextView
