--- a/app/src/main/res/layout/fragment_complete.xml
+++ b/app/src/main/res/layout/fragment_complete.xml
@@ -20,6 +20,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="?android:textColorPrimary"
             android:textSize="27sp"
             tools:text="8979323846..." />
 
@@ -30,7 +31,7 @@
             android:background="@null"
             android:contentDescription="@string/settings"
             android:scaleType="fitCenter"
-            android:src="@mipmap/ic_settings_black_36dp" />
+            android:src="@mipmap/ic_settings_36dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -55,9 +56,8 @@
             android:layout_height="wrap_content"
             android:background="@null"
             android:contentDescription="@string/next"
-            android:src="@mipmap/ic_arrow_forward_black_36dp" />
+            android:src="@mipmap/ic_arrow_forward_36dp" />
     </LinearLayout>
-
 
     <com.teinproductions.tein.pitrainer.Keyboard
         android:id="@+id/keyboard"
@@ -66,5 +66,4 @@
         android:layout_alignParentBottom="true"
         android:visibility="gone"
         tools:visibility="visible" />
-
 </RelativeLayout>
