--- a/app/src/main/res/layout/fragment_reference.xml
+++ b/app/src/main/res/layout/fragment_reference.xml
@@ -3,20 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="none"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:scrollbars="none">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
         <TextView
             android:id="@+id/integerPart_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="?android:textColorPrimary"
             android:textSize="56sp"
             tools:text="3." />
 
@@ -25,6 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/integerPart_textView"
+            android:textColor="?android:textColorPrimary"
             android:textSize="18sp"
             tools:text="1415926535" />
 
@@ -40,8 +42,6 @@
             android:contentDescription="@string/settings"
             android:padding="16dp"
             android:scaleType="fitCenter"
-            android:src="@mipmap/ic_settings_black_36dp" />
-
+            android:src="@mipmap/ic_settings_36dp" />
     </RelativeLayout>
-
 </ScrollView>
