--- a/app/src/main/res/layout/fragment_time.xml
+++ b/app/src/main/res/layout/fragment_time.xml
@@ -18,6 +18,7 @@
             android:id="@+id/integerPart_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="?android:textColorPrimary"
             android:textSize="48sp"
             tools:text="3." />
 
@@ -67,7 +68,7 @@
         android:background="@null"
         android:contentDescription="@string/done"
         android:padding="8dp"
-        android:src="@mipmap/ic_done_black_36dp" />
+        android:src="@mipmap/ic_done_36dp" />
 
     <ImageButton
         android:id="@+id/high_scores_button"
@@ -79,7 +80,7 @@
         android:background="@null"
         android:contentDescription="@string/high_scores"
         android:padding="8dp"
-        android:src="@mipmap/ic_crown_black_36dp" />
+        android:src="@mipmap/ic_crown_36dp" />
 
     <com.teinproductions.tein.pitrainer.Keyboard
         android:id="@+id/keyboard"
