--- a/app/src/main/res/layout/list_item_record.xml
+++ b/app/src/main/res/layout/list_item_record.xml
@@ -33,16 +33,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
+                android:textColor="?android:textColorPrimary"
                 android:textSize="18sp"
                 tools:text="Tein" />
 
             <TextView
-                android:textColor="@android:color/darker_gray"
                 android:id="@+id/date_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
+                android:textColor="@android:color/darker_gray"
                 android:textSize="14sp"
                 tools:text="5-9-2015" />
 
