--- a/app/src/main/res/layout/content_infinite_series.xml
+++ b/app/src/main/res/layout/content_infinite_series.xml
@@ -23,6 +23,13 @@
         android:textSize="32sp" />
 
     <TextView
+        android:id="@+id/result_textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="?android:textColorPrimary"
+        android:textSize="24sp" />
+
+    <TextView
         android:id="@+id/n_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
