--- a/app/src/main/res/layout/fragment_complete.xml
+++ b/app/src/main/res/layout/fragment_complete.xml
@@ -59,7 +59,7 @@
     </LinearLayout>
 
 
-    <com.teinproductions.tein.pitrainer.Keyboard
+    <com.teinproductions.tein.pitrainer.keyboard.Keyboard
         android:id="@+id/keyboard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
