--- a/app/src/main/res/layout/fragment_practise.xml
+++ b/app/src/main/res/layout/fragment_practise.xml
@@ -82,7 +82,7 @@
         </TableRow>
     </TableLayout>
 
-    <com.teinproductions.tein.pitrainer.Keyboard
+    <com.teinproductions.tein.pitrainer.keyboard.Keyboard
         android:id="@+id/keyboard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
