Add option to choose from several keyboard layouts

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -22,4 +22,8 @@
         android:title="@string/number"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/choose_keyboard_layout"
+        android:title="@string/choose_keyboard_layout"
+        app:showAsAction="never" />
 </menu>
