--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
 
     <color name="colorPrimary">#2196F3</color>
     <color name="colorPrimaryDark">#1976D2</color>
-    <color name="colorAccent">#00C853</color>
+    <color name="colorAccent">#00c853</color>
 
     <color name="red">#ffff0000</color>
     <color name="restart_arrow_color">#ff000000</color>
