--- a/app/src/main/res/layout-land/fragment_time.xml
+++ b/app/src/main/res/layout-land/fragment_time.xml
@@ -17,83 +17,89 @@
         android:visibility="gone"
         tools:visibility="visible" />
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="0dp"
-        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingStart="@dimen/activity_horizontal_margin">
+        android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/headerLayout"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingStart="@dimen/activity_horizontal_margin">
+
+            <LinearLayout
+                android:id="@+id/headerLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/integerPart_textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="48sp"
+                    tools:text="3." />
+
+                <TextView
+                    android:id="@+id/timer"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:textSize="38sp"
+                    tools:text="00:31" />
+
+                <ImageButton
+                    android:id="@+id/restart_button"
+                    android:layout_width="56sp"
+                    android:layout_height="56sp"
+                    android:background="@null"
+                    android:contentDescription="@string/restart"
+                    android:scaleType="fitCenter"
+                    tools:src="@mipmap/ic_refresh_black_36dp" />
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/input_editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/headerLayout"
+                android:maxLines="8"
+                android:numeric="integer"
+                android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/integerPart_textView"
+                android:id="@+id/digits_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="48sp"
-                tools:text="3." />
-
-            <TextView
-                android:id="@+id/timer"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="38sp"
-                tools:text="00:31" />
+                android:layout_below="@id/input_editText"
+                android:textSize="22sp"
+                tools:text="Digits: 0" />
 
             <ImageButton
-                android:id="@+id/restart_button"
-                android:layout_width="56sp"
-                android:layout_height="56sp"
+                android:id="@+id/done_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/input_editText"
                 android:background="@null"
-                android:contentDescription="@string/restart"
-                android:scaleType="fitCenter"
-                tools:src="@mipmap/ic_refresh_black_36dp" />
-        </LinearLayout>
+                android:contentDescription="@string/done"
+                android:padding="8dp"
+                android:src="@mipmap/ic_done_36dp" />
 
-        <EditText
-            android:id="@+id/input_editText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/headerLayout"
-            android:maxLines="8"
-            android:numeric="integer"
-            android:textSize="24sp" />
+            <ImageButton
+                android:id="@+id/high_scores_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/input_editText"
+                android:layout_toLeftOf="@id/done_button"
+                android:layout_toStartOf="@id/done_button"
+                android:background="@null"
+                android:contentDescription="@string/high_scores"
+                android:padding="8dp"
+                android:src="@mipmap/ic_crown_36dp" />
+        </RelativeLayout>
+    </ScrollView>
 
-        <TextView
-            android:id="@+id/digits_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/input_editText"
-            android:textSize="22sp"
-            tools:text="Digits: 0" />
-
-        <ImageButton
-            android:id="@+id/done_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/input_editText"
-            android:background="@null"
-            android:contentDescription="@string/done"
-            android:padding="8dp"
-            android:src="@mipmap/ic_done_36dp" />
-
-        <ImageButton
-            android:id="@+id/high_scores_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/input_editText"
-            android:layout_toLeftOf="@id/done_button"
-            android:layout_toStartOf="@id/done_button"
-            android:background="@null"
-            android:contentDescription="@string/high_scores"
-            android:padding="8dp"
-            android:src="@mipmap/ic_crown_36dp" />
-    </RelativeLayout>
 </LinearLayout>
