--- a/app/src/main/res/layout/fragment_practise.xml
+++ b/app/src/main/res/layout/fragment_practise.xml
@@ -8,80 +8,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <LinearLayout
-        android:id="@+id/headerLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical">
-
-        <TextView
-            android:id="@+id/integerPart_textView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="?android:textColorPrimary"
-            android:textSize="48sp"
-            tools:text="3." />
-
-        <ImageButton
-            android:id="@+id/refresh_button"
-            android:layout_width="56sp"
-            android:layout_height="56sp"
-            android:background="@null"
-            android:contentDescription="@string/restart"
-            android:scaleType="fitCenter"
-            tools:src="@mipmap/ic_refresh_black_36dp" />
-    </LinearLayout>
-
-    <EditText
-        android:id="@+id/input_editText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/headerLayout"
-        android:maxLines="8"
-        android:numeric="integer"
-        android:textSize="24sp" />
-
-    <TableLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/input_editText"
-        android:layout_marginTop="8dp">
-
-        <TableRow>
-
-            <TextView
-                android:text="@string/digits_colon"
-                android:textSize="22sp" />
-
-            <TextView
-                android:id="@+id/digits_textView"
-                android:textSize="22sp" />
-        </TableRow>
-
-        <TableRow android:layout_marginTop="4dp">
-
-            <TextView
-                android:text="@string/errors_colon"
-                android:textSize="22sp" />
-
-            <TextView
-                android:id="@+id/errors_textView"
-                android:textSize="22sp" />
-        </TableRow>
-
-        <TableRow android:layout_marginTop="4dp">
-
-            <TextView
-                android:text="@string/percentage_colon"
-                android:textSize="22sp" />
-
-            <TextView
-                android:id="@+id/percentage_textView"
-                android:textSize="22sp" />
-        </TableRow>
-    </TableLayout>
-
     <com.teinproductions.tein.pitrainer.keyboard.Keyboard
         android:id="@+id/keyboard"
         android:layout_width="match_parent"
@@ -90,4 +16,89 @@
         android:visibility="gone"
         tools:visibility="visible" />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/keyboard"
+        android:layout_alignParentTop="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:id="@+id/headerLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:id="@+id/integerPart_textView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textColor="?android:textColorPrimary"
+                    android:textSize="48sp"
+                    tools:text="3." />
+
+                <ImageButton
+                    android:id="@+id/refresh_button"
+                    android:layout_width="56sp"
+                    android:layout_height="56sp"
+                    android:background="@null"
+                    android:contentDescription="@string/restart"
+                    android:scaleType="fitCenter"
+                    tools:src="@mipmap/ic_refresh_black_36dp" />
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/input_editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/headerLayout"
+                android:maxLines="8"
+                android:numeric="integer"
+                android:textSize="24sp" />
+
+            <TableLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/input_editText"
+                android:layout_marginTop="8dp">
+
+                <TableRow>
+
+                    <TextView
+                        android:text="@string/digits_colon"
+                        android:textSize="22sp" />
+
+                    <TextView
+                        android:id="@+id/digits_textView"
+                        android:textSize="22sp" />
+                </TableRow>
+
+                <TableRow android:layout_marginTop="4dp">
+
+                    <TextView
+                        android:text="@string/errors_colon"
+                        android:textSize="22sp" />
+
+                    <TextView
+                        android:id="@+id/errors_textView"
+                        android:textSize="22sp" />
+                </TableRow>
+
+                <TableRow android:layout_marginTop="4dp">
+
+                    <TextView
+                        android:text="@string/percentage_colon"
+                        android:textSize="22sp" />
+
+                    <TextView
+                        android:id="@+id/percentage_textView"
+                        android:textSize="22sp" />
+                </TableRow>
+            </TableLayout>
+        </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
