--- a/app/src/main/res/layout/list_item_keyboards.xml
+++ b/app/src/main/res/layout/list_item_keyboards.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <include layout="@layout/layout_keyboard"
+    <include
+        android:layout_gravity="center_horizontal"
+        layout="@layout/layout_keyboard"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 </FrameLayout>
